--- a/cie/demo.html
+++ b/cie/demo.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link ref="spredsheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
         <h1>Home</h1>
     </head>
     <body>
